# UltraObjectHandler

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/data/: data.sqbpro  data.txt
src/: CMakeLists.txt
src/Controller/: CMakeLists.txt  Controller.cpp  Controller.h
src/DataManager/: CMakeLists.txt  DataManager.cpp  DataManager.h
src/Menu/: CMakeLists.txt  MainMenu.cpp  MainMenu.h
src/Object/: CMakeLists.txt  Object.cpp  Object.h
src/SQLiteInterface/: CMakeLists.txt
